# Cauch-E

./: .gitignore  Dockerfile  LICENCE.md  README.md  docker-compose.yaml  pyproject.toml
cauch_e/: __main__.py  bot.py  config.py  db.py  error.py  groups.py
cauch_e/cmd/: common.py  groups.py  modules.py
